--- a/assets/index.html
+++ b/assets/index.html
@@ -16,7 +16,7 @@
         <h1> Receita de Omelete Simples</h1>
         <p>Um prato fácil e rápido, perfeito para qualquer refeição. Esta omelete classica combina ovos batidos cozidos à perfeição, opcionalmente recheados com sua escolha de queijo, legumes ou carne</p>
 
-        <div class="Tempo">
+        <div class="tempo">
             <h2>Tempo de preparo</h2>
             
             <ul>
@@ -32,7 +32,7 @@
             </ul>
         </div>
 
-        <div class="Ingredientes">
+        <div class="ingredientes">
             <h2>Ingredientes</h2>
 
             <ul>
